--- a/index.html
+++ b/index.html
@@ -195,20 +195,37 @@
   transition: all 0.3s ease;
 }
 
-.play-button.clicked {
-  animation: playButtonClick 0.5s ease forwards;
+.category-card .play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60px;
+  height: 60px;
+  background: rgba(201, 31, 39, 0.45); /* 50% transparency */
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  z-index: 1;
 }
 
-@keyframes playButtonClick {
-  0% {
-    transform: translate(-50%, -50%) scale(1);
-  }
-  50% {
-    transform: translate(-50%, -50%) scale(0.9);
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1);
-  }
+.category-card .play-button:hover {
+  transform: translate(-50%, -50%) scale(1.1);
+  background: rgba(168, 3, 10, 0.6);
+}
+
+.category-card .play-button::before {
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 12px 0 12px 20px;
+  border-color: transparent transparent transparent rgba(255, 255, 255, 0.9);
+  margin-left: 5px;
+  transition: all 0.3s ease;
 }
 
 .book-cover-container {
@@ -473,6 +490,7 @@ async function loadSheetData() {
             coverCard.style.animation = 'bookFallIn 0.6s cubic-bezier(0.2, 0.8, 0.2, 1) backwards';
             coverCard.innerHTML = `
               <img src="${data.values[1][4]}" alt="${sheet.properties.title}" style="width: 100%; height: 250px; object-fit: cover;">
+              <div class="play-button"></div>
               <div style="
                 position: absolute; 
                 bottom: 0; 
