--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   transform: translateY(-2px);
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
 }
-</style><script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script></head><body><div class="container"><div style="text-align: left; font-size: 12px; color: #888; margin-bottom: 10px;" id="last-update"></div><button class="home-btn" onclick="showHome()"><i class="fas fa-home"></i> In&#xed;cio</button><div class="header"><div style="display: flex; justify-content: center; margin-bottom: 20px;"><dotlottie-player src="https://lottie.host/315bee09-976f-4ffa-b81e-a7d4f94f22d2/UlhFo9JrcM.lottie" background="transparent" speed="1" style="width: 150px; height: 150px" loop autoplay></dotlottie-player></div><h1>Cursos B&#xe1;sicos de Direito para Iniciantes</h1><div style="text-align: center; font-size: 12px; color: #888; margin-bottom: 15px;">Comece sua jornada no Direito com nossos cursos introdut&#xf3;rios &#x1f4da;&#x2696;&#xfe0f;</div><div class="search-container hidden"><div class="search-box"><input type="text" class="search-input" placeholder="Pesquisar cursos..."><i class="search-icon fas fa-search"></i></div></div><div class="stats-container"><div class="book-count" id="book-count"></div><div class="category-count" id="category-count"></div></div></div><div class="navigation-buttons" style="
+</style><script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script></head><body><div class="container"><div style="text-align: left; font-size: 12px; color: #888; margin-bottom: 10px;" id="last-update"></div><button class="home-btn" onclick="showHome()"><i class="fas fa-home"></i> In&#xed;cio</button><div class="header"><div style="display: flex; justify-content: center; margin-bottom: 20px;"><dotlottie-player src="https://lottie.host/315bee09-976f-4ffa-b81e-a7d4f94f22d2/UlhFo9JrcM.lottie" background="transparent" speed="1" style="width: 150px; height: 150px" loop autoplay></dotlottie-player></div><h1>Cursos de Direito para Iniciantes</h1><div style="text-align: center; font-size: 12px; color: #888; margin-bottom: 15px;">Comece sua jornada no Direito com nossos cursos introdut&#xf3;rios &#x1f4da;&#x2696;&#xfe0f;</div><div class="search-container hidden"><div class="search-box"><input type="text" class="search-input" placeholder="Pesquisar cursos..."><i class="search-icon fas fa-search"></i></div></div><div class="stats-container"><div class="book-count" id="book-count"></div><div class="category-count" id="category-count"></div></div></div><div class="navigation-buttons" style="
   display: none;
   gap: 10px;
   margin: 0 15px 20px;
@@ -603,7 +603,7 @@ function switchMode(mode) {
   });
   setTimeout(() => {
     currentMode = mode;
-    mainTitle.textContent = mode === 'read' ? 'Cursos Básicos de Direito para Iniciantes' : 'Download de Cursos';
+    mainTitle.textContent = mode === 'read' ? 'Cursos de Direito para Iniciantes' : 'Download de Cursos';
     if (mode === 'read') {
       if (currentTab) {
         displayBooks(books[currentTab]);
